bump dataplane api to beta version
